// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should not render component with empty publication 1`] = `""`;

exports[`Publication Details Component  should render component 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data="Article (original research)"
        heading="Sub-type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A3825&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=School+of+Chemistry+and+Molecular+Biosciences"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A218311&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=HERDC+Pre-Audit"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A171723&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=UQ+Centre+for+Clinical+Research+Publications"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
    </TableBody>
  </Table>
</StandardCard>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<StandardCard
  className=""
  title="Publication details"
>
  <Table
    allRowsSelected={false}
    className="publicationDetails vertical"
    fixedFooter={true}
    fixedHeader={true}
    height="inherit"
    multiSelectable={false}
    selectable={false}
  >
    <TableBody
      allRowsSelected={false}
      deselectOnClickaway={true}
      displayRowCheckbox={false}
      multiSelectable={false}
      preScanRows={true}
      selectable={true}
      style={Object {}}
    >
      <ViewRecordTableRow
        data="Journal Article"
        heading="Publication type"
      />
      <ViewRecordTableRow
        data={
          <ul>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A3825&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=School+of+Chemistry+and+Molecular+Biosciences"
              >
                School of Chemistry and Molecular Biosciences
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A218311&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=HERDC+Pre-Audit"
              >
                HERDC Pre-Audit
              </Link>
            </li>
            <li>
              <Link
                replace={false}
                to="/records/search?page=1&pageSize=20&sortBy=published_date&sortDirection=Desc&activeFacets%5Bfilters%5D%5BCollection%5D=UQ%3A171723&activeFacets%5Bfilters%5D%5BCollection+(lookup)%5D=UQ+Centre+for+Clinical+Research+Publications"
              >
                UQ Centre for Clinical Research Publications
              </Link>
            </li>
          </ul>
        }
        heading="Collections"
      />
    </TableBody>
  </Table>
</StandardCard>
`;
